[gd_scene load_steps=13 format=2]

[ext_resource path="res://public/fonts/soupofjustice.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/gameselection/route.gd" type="Script" id=2]
[ext_resource path="res://game/backbutton/back.tscn" type="PackedScene" id=3]
[ext_resource path="res://public/image/common/bgMain.jpg" type="Texture" id=4]
[ext_resource path="res://public/image/common/CharBG.png" type="Texture" id=5]
[ext_resource path="res://game/interface/character/character3.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/interface/character/character2.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/interface/character/character1.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/gameselection/chooseCharacter/chooseCharacter.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://public/fonts/soupofjustice.ttf"

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.12244
margin_bottom = -1.12244
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -43.0
margin_top = -88.0
margin_right = 55.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 1 )
text = "Next"
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backbutton" parent="." instance=ExtResource( 3 )]
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.65098 )
scene_to_load = "res://game/title_screen/TitleScreen.tscn"

[node name="character1" type="TextureButton" parent="."]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -475.0
margin_top = -150.0
margin_right = -225.0
margin_bottom = 150.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" parent="character1" instance=ExtResource( 8 )]
position = Vector2( 45, 50 )

[node name="character2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -150.0
margin_right = 125.0
margin_bottom = 150.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" parent="character2" instance=ExtResource( 7 )]
position = Vector2( 45, 50 )

[node name="character3" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 225.0
margin_top = -150.0
margin_right = 475.0
margin_bottom = 150.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" parent="character3" instance=ExtResource( 6 )]
position = Vector2( 45, 50 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -258.0
margin_top = 50.0
margin_right = 258.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.470588, 0.647059, 0.501961, 1 )
text = "Choose Character"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="Button" method="_on_redirectWorld_pressed"]
[connection signal="pressed" from="character1" to="." method="_on_character1_pressed"]
