[gd_scene load_steps=11 format=2]

[ext_resource path="res://public/image/world1/chooseSec.png" type="Texture" id=1]
[ext_resource path="res://public/image/world3/small.png" type="Texture" id=2]
[ext_resource path="res://public/image/world3/background.png" type="Texture" id=3]
[ext_resource path="res://public/image/world1/sectionbg.png" type="Texture" id=4]
[ext_resource path="res://public/fonts/soupofjustice.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://game/interface/boss/world3/section3.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/interface/boss/world3/section2.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/interface/boss/world3/section1.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/gameselection/route.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 45.0
margin_right = 200.0
margin_bottom = 225.0
rect_clip_content = true
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SectionButton2" type="TextureButton" parent="."]
margin_left = 490.0
margin_top = 250.0
margin_right = 790.0
margin_bottom = 500.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="SectionButton2" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -107.5
margin_right = 86.5
margin_bottom = 107.5

[node name="SectionButton1" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 250.0
margin_right = 400.0
margin_bottom = 500.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="SectionButton1" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -107.5
margin_right = 86.5
margin_bottom = 107.5

[node name="SectionButton3" type="TextureButton" parent="."]
margin_left = 880.0
margin_top = 250.0
margin_right = 1180.0
margin_bottom = 500.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="SectionButton3" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -107.5
margin_right = 86.5
margin_bottom = 107.5

[node name="Easy" type="TextureButton" parent="."]
margin_left = 150.0
margin_top = 520.0
margin_right = 350.0
margin_bottom = 600.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="TextureButton" parent="."]
margin_left = 540.0
margin_top = 520.0
margin_right = 740.0
margin_bottom = 600.0
size_flags_horizontal = 0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="TextureButton" parent="."]
margin_left = 930.0
margin_top = 520.0
margin_right = 1130.0
margin_bottom = 600.0
size_flags_horizontal = 0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -62.5
margin_top = -93.0
margin_right = 62.5
margin_bottom = -41.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.290196, 0.882353, 0.239216, 1 )
text = "Start"
flat = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="Start" method="_on_world3Start_pressed"]
